frontend null error and backend auth/me 500 is not yet solved

--- a/env.example
+++ b/env.example
@@ -33,7 +33,7 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Security
 BCRYPT_ROUNDS=12
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://9qmpzklg-3000.inc1.devtunnels.ms
 
 # Logging
 LOG_LEVEL=info
